--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
     $<span id="total">0</span></p>
 
 
-    <script src="/script.js"></script>
+   <!-- <script src="/script.js"></script> -->
+   <script src="script.js" type="text/javascript"></script>
+
 </body>
 </html>
